--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.stefankruk</groupId>
+    <groupId>de.stefankruk.microservice</groupId>
     <artifactId>parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -10,6 +10,7 @@
 
     <modules>
         <module>eureka-microservice</module>
+        <module>frontend-microservice</module>
     </modules>
 
     <scm>
