--- a/eureka-microservice/src/main/resources/application.yml
+++ b/eureka-microservice/src/main/resources/application.yml
@@ -1,7 +1,14 @@
-server.port=8761
+server:
+  port: 8761
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
 
-logging.level.com.netflix.eureka=OFF
-logging.level.com.netflix.discovery=OFF
+logging:
+  level:
+    com:
+      netflix:
+        eureka: OFF
+        discovery: OFF
