--- a/config-microservice/src/main/resources/application.yml
+++ b/config-microservice/src/main/resources/application.yml
@@ -2,7 +2,9 @@ server:
   port: 8888
 
 spring:
-    application:
+  profiles:
+
+  application:
         name: config-microservice
     mvc:
         view:
@@ -15,6 +17,9 @@ spring:
           bootstrap: true
           git:
             uri: file:../config/
+
+spring.profiles.active=native
+spring.cloud.config.server.native.searchLocations=${user.dir}/src/main/resources/configs
 
 endpoints:
     restart:
