service-discovery first

--- a/frontend-microservice/src/main/resources/bootstrap.yml
+++ b/frontend-microservice/src/main/resources/bootstrap.yml
@@ -8,6 +8,9 @@ spring:
   cloud:
     config:
       uri: http://localhost:8888
+      discovery:
+        enabled: true
+        service-id: config-microservice
 
 endpoints:
     restart:
