--- a/frontend-microservice/pom.xml
+++ b/frontend-microservice/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-ribbon</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
