--- a/gateway-microservice/src/main/resources/bootstrap.yml
+++ b/gateway-microservice/src/main/resources/bootstrap.yml
@@ -1,10 +1,6 @@
 spring:
   application:
-    name: frontend-microservice
-  mvc:
-    view:
-      prefix: /
-      suffix: .jsp
+    name: gateway-microservice
   cloud:
     config:
       discovery:
@@ -28,5 +24,3 @@ eureka:
     client:
         serviceUrl:
             defaultZone: http://${eureka.host}:8761/eureka/
-
-index: index
