--- a/config/authentication-microservice.yml
+++ b/config/authentication-microservice.yml
@@ -1,2 +1,8 @@
 server:
   port: 9000
+
+spring:
+  oauth2:
+    resource:
+      userInfoUri: https://api.github.com/user
+      preferTokenInfo: false
