--- a/resource-microservice/src/main/resources/bootstrap.yml
+++ b/resource-microservice/src/main/resources/bootstrap.yml
@@ -1,15 +1,12 @@
 spring:
   application:
-    name: frontend-microservice
-  mvc:
-    view:
-      prefix: /
-      suffix: .jsp
+    name: resource-microservice
   cloud:
     config:
       discovery:
         enabled: true
         service-id: config-microservice
+
 endpoints:
     restart:
         enabled: true
@@ -27,5 +24,3 @@ eureka:
     client:
         serviceUrl:
             defaultZone: http://${eureka.host}:8761/eureka/
-
-index: index
