--- a/account-microservice/src/main/resources/bootstrap.yml
+++ b/account-microservice/src/main/resources/bootstrap.yml
@@ -1,10 +1,6 @@
 spring:
   application:
-    name: frontend-microservice
-  mvc:
-    view:
-      prefix: /
-      suffix: .jsp
+    name: account-microservice
   cloud:
     config:
       discovery:
