--- a/config/admin-microservice.yml
+++ b/config/admin-microservice.yml
@@ -1,5 +1,9 @@
+logging:
+    level:
+      org.springframework.security: DEBUG
 server:
   port: 10001
 security:
+  sessions: NEVER
   user:
     role: USER,ADMIN
