--- a/eureka-microservice/pom.xml
+++ b/eureka-microservice/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>spring-cloud-dashboard</artifactId>
             <version>1.1.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
