--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,8 @@
         <module>frontend-microservice</module>
         <module>config-microservice</module>
         <module>gateway-microservice</module>
-        <module>authentication-microservice</module>
-        <module>admin-microservice</module>
-        <module>resource-microservice</module>
+        <module>account-microservice</module>
+        <module>client-microservice</module>
     </modules>
 
     <scm>
