--- a/accountclient-microservice/pom.xml
+++ b/accountclient-microservice/pom.xml
@@ -74,10 +74,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>de.stefankruk.microservice</groupId>
-			<version>0.0.1-SNAPSHOT</version>
-			<artifactId>common</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
