--- a/config/authentication-microservice.yml
+++ b/config/authentication-microservice.yml
@@ -1,8 +1,3 @@
-server:
-  port: 9000
-
-spring:
-  oauth2:
-    resource:
-      userInfoUri: https://api.github.com/user
-      preferTokenInfo: false
+logging:
+  level:
+    org.springframework.security: DEBUG
