gateway as ui with authentication works

--- a/config/frontend-microservice.yml
+++ b/config/frontend-microservice.yml
@@ -3,7 +3,7 @@ server:
 
 security:
   user:
-    password: none
+    password: password
   oauth2:
     client:
       accessTokenUri: http://localhost:9999/uaa/oauth/token
