added resource-microservice as module

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>account-microservice</module>
         <module>accountclient-microservice</module>
         <module>authentication-microservice</module>
+        <module>resource-microservice</module>
     </modules>
 
     <scm>
