--- a/config-microservice/src/main/resources/application.yml
+++ b/config-microservice/src/main/resources/application.yml
@@ -25,12 +25,34 @@ endpoints:
         enabled: true
     health:
         sensitive: false
+
 eureka:
-    host: localhost
-    instance:
-        health-check-url: http://${eureka.host}:${server.port}/
-        statusPageUrlPath: /info
-        healthCheckUrlPath: /health
-    client:
-        serviceUrl:
-            defaultZone: http://${eureka.host}:8761/eureka/
+  instance:
+    hostname: localhost
+    port: 8761
+    health-check-url: http://${eureka.host}:${server.port}/
+    statusPageUrlPath: /info
+    healthCheckUrlPath: /health
+  client:
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+
+---
+spring:
+  profiles: docker
+  cloud:
+    config:
+      server:
+        bootstrap: true
+        native:
+          search-locations: ./config
+
+server:
+  port: ${SERVICE_PORT}
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: ${REGISTRY_URL}
