--- a/config/eureka-microservice.yml
+++ b/config/eureka-microservice.yml
@@ -2,10 +2,35 @@ server:
   port: 8761
 
 eureka:
+  instance:
+    hostname: localhost
+    port: ${server.port}
   client:
     register-with-eureka: false
     fetch-registry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
 
 logging:
     level:
       org.springframework.security: DEBUG
+
+---
+spring:
+  profiles: docker
+server:
+  port: ${SERVICE_PORT}
+eureka:
+  instance:
+    hostname: ${SERVICE_HOST}
+    port: ${server.port}
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
+    enable-self-preservation: false
