--- a/config-microservice/src/main/resources/bootstrap.yml
+++ b/config-microservice/src/main/resources/bootstrap.yml
@@ -6,11 +6,6 @@ spring:
     active: native
   application:
     name: config-microservice
-  mvc:
-    view:
-      prefix: /
-      suffix: .jsp
-
   cloud:
     config:
       server:
@@ -39,20 +34,24 @@ eureka:
 
 ---
 spring:
-  profiles: docker
+  profiles:
+    active: docker
+    include: native
   cloud:
     config:
       server:
         bootstrap: true
         native:
-          search-locations: ./config
-
-server:
-  port: ${SERVICE_PORT}
+          search-locations: ${CONFIG_LOCATION}
 
 eureka:
   instance:
     prefer-ip-address: true
+    hostname: ${REGISTRY_HOST}
+    port: 8761
+    health-check-url: http://${eureka.host}:${server.port}/
+    statusPageUrlPath: /info
+    healthCheckUrlPath: /health
   client:
     service-url:
-      defaultZone: ${REGISTRY_URL}
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
