--- a/gateway-microservice/src/main/resources/bootstrap.yml
+++ b/gateway-microservice/src/main/resources/bootstrap.yml
@@ -30,12 +30,14 @@ eureka:
 spring:
   profiles: docker
 
-server:
-  port: ${SERVICE_PORT}
-
 eureka:
   instance:
     prefer-ip-address: true
+    hostname: ${REGISTRY_HOST}
+    port: 8761
+    health-check-url: http://${eureka.host}:${server.port}/
+    statusPageUrlPath: /info
+    healthCheckUrlPath: /health
   client:
     service-url:
-      defaultZone: ${REGISTRY_URL}
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
