--- a/resource-microservice/src/main/resources/bootstrap.yml
+++ b/resource-microservice/src/main/resources/bootstrap.yml
@@ -7,12 +7,12 @@ spring:
         enabled: true
         service-id: config-microservice
 endpoints:
-    restart:
-        enabled: true
-    shutdown:
-        enabled: true
-    health:
-        sensitive: false
+  restart:
+    enabled: true
+  shutdown:
+    enabled: true
+  health:
+    sensitive: false
 
 eureka:
   instance:
@@ -29,12 +29,14 @@ eureka:
 spring:
   profiles: docker
 
-server:
-  port: ${SERVICE_PORT}
-
 eureka:
   instance:
     prefer-ip-address: true
+    hostname: ${REGISTRY_HOST}
+    port: 8761
+    health-check-url: http://${eureka.host}:${server.port}/
+    statusPageUrlPath: /info
+    healthCheckUrlPath: /health
   client:
     service-url:
-      defaultZone: ${REGISTRY_URL}
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
