--- a/config/authentication-microservice.yml
+++ b/config/authentication-microservice.yml
@@ -1,7 +1,7 @@
 server:
   port: 9999
   context-path: /uaa
-  use-forward-headers: false
+  use-forward-headers: true
 
 keystore.key: mySecretKey
 
