--- a/eureka-microservice/src/main/resources/bootstrap.yml
+++ b/eureka-microservice/src/main/resources/bootstrap.yml
@@ -27,6 +27,9 @@ spring:
 server:
   port: 8761
 eureka:
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
+    enable-self-preservation: false
   instance:
     hostname: ${SERVICE_HOST}
     port: ${server.port}
